| Bug #5650 | 'replace' does not follow symlinks. | ||
|---|---|---|---|
| Submitted: | 19 Sep 2004 14:19 | Modified: | 16 Dec 2005 18:56 |
| Reporter: | Konstantin Osipov (OCA) | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Command-line Clients | Severity: | S3 (Non-critical) |
| Version: | all | OS: | UNIX |
| Assigned to: | Georg Richter | CPU Architecture: | Any |
[19 Sep 2004 14:19]
Konstantin Osipov
[26 Jul 2005 5:43]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/27578
[29 Jul 2005 21:29]
Patrick Galbraith
This patch looks good and works: mysqldev@production:~/patg/mysql-5.0> echo "foo" > foo.txt mysqldev@production:~/patg/mysql-5.0> ln -s foo.txt bar.txt mysqldev@production:~/patg/mysql-5.0> ls -al foo.txt bar.txt lrwxrwxrwx 1 mysqldev users 7 Jul 29 23:25 bar.txt -> foo.txt -rw-r--r-- 1 mysqldev users 4 Jul 29 23:25 foo.txt mysqldev@production:~/patg/mysql-5.0> ./extra/replace foo bar -- bar.txt bar.txt converted mysqldev@production:~/patg/mysql-5.0> ls -l foo.txt bar.txt lrwxrwxrwx 1 mysqldev users 7 Jul 29 23:25 bar.txt -> foo.txt -rw-r--r-- 1 mysqldev users 4 Jul 29 23:26 foo.txt mysqldev@production:~/patg/mysql-5.0> diff -u foo.txt bar.txt mysqldev@production:~/patg/mysql-5.0> vi bar.txt mysqldev@production:~/patg/mysql-5.0> cat bar.txt bar mysqldev@production:~/patg/mysql-5.0> cat foo.txt bar mysqldev@production:~/patg/mysql-5.0> (can't set my name in the bugs system as reviewer, Patrick Galbraith)
[16 Dec 2005 18:56]
Jim Winstead
This was pushed some time ago. (Not sure what version, but I don't believe it really needs documentation.)
