fix for bug#5650 ('replace' does not follow symlinks)

fix now checks if the original (from) file is a symlink and uses the
link name. This prevents creation of a new file (and loss of symlink)
when renaming the tempfile.